--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/psyto/fabriquant"
+        "url": "https://github.com/fabriquant-labs/fabriquant"
     },
     "bugs": {
-        "url": "https://github.com/psyto/fabriquant/issues"
+        "url": "https://github.com/fabriquant-labs/fabriquant/issues"
     },
-    "homepage": "https://github.com/psyto/fabriquant",
+    "homepage": "https://github.com/fabriquant-labs/fabriquant",
     "devDependencies": {
         "@types/node": "^20.11.5",
         "@typescript-eslint/eslint-plugin": "^6.19.0",
