--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@fabriquant/sdk",
     "version": "0.1.0",
-    "description": "The Precision Execution Stack for Solana - Engineered for Parallelism, Built for Autonomy, Woven for Speed",
+    "description": "The Precision Execution Stack — Solana-First, Cross-Chain Enabled - Engineered for Parallelism, Built for Autonomy, Woven for Speed",
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
