Integrate fabrknt.com domain across codebase
- Update package.json homepage to https://fabrknt.com
- Add canonical URL and Twitter Card meta tags to website
- Add website link to README.md header
- Update BUSINESS_PLAN.md website field
- Add website links to documentation support sections (GUARD, RISK, PRIVACY)
- Update marketing knowledge base contact information

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "bugs": {
         "url": "https://github.com/fabrknt/fabrknt/issues"
     },
-    "homepage": "https://github.com/fabrknt/fabrknt",
+    "homepage": "https://fabrknt.com",
     "devDependencies": {
         "@types/node": "^20.11.5",
         "@typescript-eslint/eslint-plugin": "^6.19.0",
